# app/Http/Requests/V1/Auth/ResetLinkRequest.php
@@ -1,0 +1,30 @@
+<?php
+
+namespace App\Http\Requests\V1\Auth;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class ResetLinkRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return [
+            'email' => 'required|string|exists:users,email',
+        ];
+    }
+}
